# air-quality-dashboard

./: .gitignore  README.md  connection_to_database.py  dashboard.py  pyproject.toml  ready_dashboard.py  requirements.txt  test.py
reads/: asyncfetcher.py  interface.py
reads/fetch/: async_fetch.py
reads/query/: async_query.py
test/: dev_server.py  test_server.py  testsrv.py
test/reads/: test_interface.py
test/reads/fetch/: test_fetcher.py
test/reads/query/: test_query.py
test/ui/: dev_dashboard.py
ui/: dashboard.py
ui/fetcher/: fetcher.py
