[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ['async', 'http', 'data', 'collector', 'influxdb', 'nodemcu', 'arduino', 'sensors', 'json']
dynamic = ["version"]
name = "air-quality-dashboard"
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/straightchlorine/air-quality-dashboard"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "single"
